fixed navbar image overlapping successfully

--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ p{
     height: 50px;
     width: 100px;
 }
+.navbar-brand img{
+    max-height: 100%;
+}
 .search {
     height: 45px;
     outline: none;
